[add]admin/genre error

--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -5,14 +5,7 @@
     </div>
   </div>
 
-  <% if @item.errors.any? %>
-  <%= @item.errors.count %>件のエラーが発生しました
-  <ul>
-    <% @item.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-  </ul>
-<% end %>
+<%= render "layouts/errors" ,obj: @item %>
 
   <div class="row">
     <div class="mx-auto">
