--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -45,7 +45,7 @@
   <div class="row">
     <div class= "col-4">
        <tr>
-       <td><%= link_to "買い物を続ける", items_path,class: "btn btn-info" %></td>
+       <td><%= link_to "買い物を続ける", root_path,class: "btn btn-info" %></td>
        </tr>
     </div>
     <div class='col-5'></div>
@@ -59,6 +59,8 @@
     </div>
   </div>
   <div class="row justify-content-center">
+  <% if @cart_items.any? %>
   <td><%= link_to "情報入力に進む", new_order_path,class: "btn btn-green" %></td>
+  <% end %>
   </div>
 </div>
