--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -18,11 +18,8 @@
       </div>
     </div>
     <div class="row">
-
       <div class="col-3"></div>
-      <div class="col-6">
-        <%= image_tag  "3708631_s.jpg", size: '500x320', class: "rounded-circle border border-brown" %>
-      </div>
+      <div class="col-6 about-image rounded-circle border border-brown"></div>
       <div class="col-3"></div>
     </div>
   </div>
