--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,14 +1,21 @@
 <div class="container-fuild">
   <div class="row">
-    
-    
+    <div class="col">
+      <h2 class="ml-5 mt-5 mb-3">注文履歴詳細</h2>
+    </div>
   </div>
   <div class="row">
     <div class="col-6">
-      <div class="mt-5 ml-5 mb-2">
-      <h2 class="mb-3">注文履歴詳細</h2>
+      <div class="ml-5 mb-2">
       <strong>注文情報</strong>
+      </div>
     </div>
+    <div class="col-4">
+      <div class="mb-2">
+        <strong>請求情報</strong>
+      </div>
+    </div>
+    <div class="col-6">
       <div class="ml-5">
         <table class="table table-bordered border-dark">
           <tbody>
@@ -37,9 +44,6 @@
       </div>
     </div>
     <div class="col-4">
-      <div class="mb-2" style="margin-top: 125px;">
-        <strong>請求情報</strong>
-      </div>
       <table class="table table-bordered border-dark">
         <tr>
           <th class="table-green">商品合計</th>
@@ -80,5 +84,4 @@
     </div>
   </div>
 </div>
-  
-  
+
