--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -65,7 +65,7 @@
         <div class="form-group row">
           <div class="col-sm-3"></div>
           <div class="col-sm-9">
-            <%= f.submit "", class:"btn btn-green mb-3 mt-3", style:"width: 60%;" %>
+            <%= f.submit "新規登録", class:"btn btn-green mb-3 mt-3", style:"width: 60%;" %>
           </div>
         </div>
       <% end %>
