--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -14,7 +14,7 @@
     <div class="col-10 col-xl-8">
       <div class="outer" style="width: 100%;">
         <div class="heading-image position-relative">
-          <div class="position-absolute heading-text"> 
+          <div class="position-absolute heading-text">
             <strong>
             <h2>ようこそ、ながのCAKEへ！</h2><br>
             <p>
@@ -39,7 +39,7 @@
           <% end %>
         </div>
         <div class="d-flex flex-row-reverse mb-4" style="width: auto;">
-          <strong><%= link_to "→全ての商品を見る", items_path , class: "mr-5 underline"%></strong>
+          <strong><%= link_to "→全ての商品を見る", items_path , class: "underline"%></strong>
         </div>
       </div>
     </div>
