--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -6,7 +6,7 @@
   </div>
   <div class="row mt-5 offset-lg-1">
     <div class="col-md-3">
-      <%= image_tag @item.image, size: "300x200" %>
+      <%= image_tag @item.image, size: "300x200", class:"object-cover" %>
     </div>
 
     <div class="col-lg-5 offset-lg-2">
