--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -1,62 +1,70 @@
 <%= render 'layouts/flash' %>
-<h1>配送先登録／一覧</h1>
-<% if @address.errors.any? %>
-  <%= @address.errors.count %>件のエラーが発生しました
-  <ul>
-    <% @address.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-  </ul>
-<% end %>
-
-  <div class="form-group">
+<%= render 'layouts/errors', obj: @address %>
+<div class="container">
+  <div class="row">
+    <div class="col-8">
+      <h1 class="mt-4">配送先登録／一覧</h1>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-3">
     <%= form_with model: @address do |f| %>
-  <div class="field">
-    <%= f.label :post_code, "郵便番号(ハイフンなし)" %>
-    <%= f.text_field :post_code %>
+      <div class="form-group">
+        <div class="field">
+          <%= f.label :post_code, "郵便番号(ハイフンなし)" %>
+        </div>
+        <div class="field">
+          <%= f.label :address, "住所" %>
+        </div>
+        <div class="field">
+          <%= f.label :name, "宛名" %>
+        </div>
+      </div>
+    </div>
+    <div class="col-5">
+      <%= f.text_field :post_code, class:"form-control", style:"width: 40%;" %>
+      <%= f.text_field :address, class:"form-control mt-1 mb-1", style:"width: 100%;"%>
+      <%= f.text_field :name, class:"form-control", style:"width: 40%;" %>
+    </div>
+    <div class="col-4 mt-auto">
+      <%= f.submit '新規登録', class: "btn btn-green" %>
+    <% end %>
+    </div>
   </div>
-  <div class="field">
-  <%= f.label :address, "住所" %>
-  <%= f.text_field :address %>
-  </div>
-  <div class="field">
-  <%= f.label :name, "宛名" %>
-  <%= f.text_field :name %>
-  </div>
-  <%= f.submit '新規登録', class: "btn btn-green" %>
-<% end %>
-</div>
-    <div class="col-md-8 offset-md-1">
-      <table class="table table-hover table-inverse">
-      <thead>
-        <tr>
-          <th>郵便番号</th>
-          <th>住所</th>
-          <th>宛名</th>
-          <th colspan="3"></th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @customer.each do |address| %>
+  <div class="row">
+    <div class="col-10 mt-4">
+        <table class="table table-hover table-border">
+        <thead>
           <tr>
-          <td>
-            <%= address.post_code %>
-          </td>
-          <td>
-            <%= address.address %>
-          </td>
-          <td>
-            <%= address.name %>
-          </td>
-          <td>
-          <%= link_to "編集する", edit_address_path(address.id), class: "btn btn-green" %>
-          </td>
-          <td>
-          <%= link_to "削除する", address_path(address.id), class: "btn btn-danger", method: :delete,"data-confirm" => "本当に削除しますか？" %>
-          </td>
+            <th class="table-border">郵便番号</th>
+            <th class="table-border">住所</th>
+            <th class="table-border">宛名</th>
+            <th colspan="3"></th>
           </tr>
-        <% end %>
-      </tbody>
+        </thead>
+        <tbody>
+          <% @customer.each do |address| %>
+            <tr>
+              <td class="table-border">
+                <%= address.post_code %>
+              </td>
+              <td class="table-border">
+                <%= address.address %>
+              </td>
+              <td class="table-border">
+                <%= address.name %>
+              </td>
+              <td>
+              <%= link_to "編集する", edit_address_path(address.id), class: "btn btn-green" %>
+              </td>
+              <td>
+              <%= link_to "削除する", address_path(address.id), class: "btn btn-danger", method: :delete,"data-confirm" => "本当に削除しますか？" %>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
       </table>
     </div>
+  </div>
+</div>
 
