--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,7 +1,7 @@
 <%= render 'layouts/flash' %>
 <div class="container-fluid">
   <div class="row">
-    <div class="col-1 col-xl-3">
+    <div class="col-2 col-xl-3">
     <!--  <div class="pt-5 pl-5">-->
     <!--    <nav class="nav flex-column bg-green" style="width: 200px;">-->
     <!--      <a>ケーキ</a>-->
@@ -11,7 +11,7 @@
     <!--    </nav>-->
     <!--  </div>-->
     </div>
-    <div class="col-10 col-xl-8">
+    <div class="col-9 col-xl-8">
       <div class="outer" style="width: 100%;">
         <div class="heading-image position-relative">
           <div class="position-absolute heading-text">
@@ -31,7 +31,7 @@
           <% @items.each do |item| %>
             <div class="item-box mr-5 pt-1" style="width: 160px;">
               <%= link_to(item, class:"item") do %>
-                <%= image_tag item.image, class: "rounded-circle shadow border border-brown", size: '160x120'%>
+                <%= image_tag item.image, class: "object-cover shadow border border-brown", size: '160x120'%>
               <% end %>
               <p class="mt-3 mb-0" > <%= item.name %></p>
               <p>￥<%= item.price %>(税抜)</p>
