--- a/app/views/public/addresses/edit.html.erb
+++ b/app/views/public/addresses/edit.html.erb
@@ -26,7 +26,7 @@
         <%= f.text_field :name, class:"form-control", style:"width: 40%;" %>
       </div>
       <div class="col-4 mt-auto">
-        <%= f.submit '新規登録', class: "btn btn-green" %>
+        <%= f.submit '編集する', class: "btn btn-green" %>
       <% end %>
       </div>
     </diV>
